# Youtube-Channel-Local-RAG

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.cuda.yml  docker-compose.yml  pyproject.toml
docker/whisper/: Dockerfile  Dockerfile.cuda  app.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TROUBLESHOOTING.md  USAGE.md
src/yt_agent/: chunking.py  cli.py  config.py  embeddings.py  factory.py  graph.py  pipeline.py  utils.py  vectorstore.py  whisper_client.py  youtube.py
tests/: test_chunking.py  test_pipeline.py
